fix: fix queries paddings and margins on small screens

--- a/src/components/QueryTab/QueryTab.css
+++ b/src/components/QueryTab/QueryTab.css
@@ -14,8 +14,7 @@
   font-weight: 900;
   white-space: nowrap;
 
-  margin: 0;
-  padding: 3px 10px;
+  margin: 0 0 10px;
 }
 
 @media (min-width: 780px) {
